<resources>
    <string name="time_lapse_title">Time lapse recording</string>
    <string name="pref_camera_id_title">Select camera</string>
    <string name="setting_off">Off</string>
    <string name="setting_on">On</string>
    <string name="pref_video_quality_entry_high">High</string>
    <string name="pref_video_quality_entry_low">Low</string>
    <string name="pref_camera_focusmode_title">Focus mode</string>
    <string name="pref_camera_focusmode_entry_auto">Auto</string>
    <string name="pref_camera_focusmode_entry_infinity">Infinity</string>
    <string name="pref_camera_focusmode_entry_macro">Macro</string>
    <string name="pref_camera_scenemode_entry_hdr">HDR</string>
    <string name="pref_camera_scenemode_entry_sunset">Sunset</string>
    <string name="pref_camera_scenemode_entry_party">Party</string>
    <string name="not_selectable_in_scene_mode">Not selectable in scene mode.</string>
    <string name="pano_dialog_waiting_previous">Waiting for previous panorama</string>
    <string name="pano_review_rendering">Rendering panorama</string>
    <string name="tap_to_focus">Touch to focus.</string>
    <string name="pref_video_effect_title">Effects</string>
    <string name="effect_none">None</string>
    <string name="effect_goofy_face_squeeze">Squeeze</string>
    <string name="effect_goofy_face_big_eyes">Big eyes</string>
    <string name="effect_goofy_face_big_mouth">Big mouth</string>
    <string name="effect_goofy_face_small_mouth">Small mouth</string>
    <string name="effect_goofy_face_big_nose">Big nose</string>
    <string name="effect_goofy_face_small_eyes">Small eyes</string>
    <string name="effect_backdropper_space">In space</string>
    <string name="effect_backdropper_sunset">Sunset</string>
    <string name="effect_backdropper_gallery">Your video</string>
    <string name="bg_replacement_message">"Set your device down.
Step out of view for a moment."</string>
    <string name="video_snapshot_hint">Press camera button to take photo while recording.</string>
    <string name="disable_video_snapshot_hint">Video snapshot is disabled when special effects are on.</string>
    <string name="clear_effects">Clear effects</string>
    <string name="effect_silly_faces">SILLY FACES</string>
    <string name="effect_background">BACKGROUND</string>
    <string name="accessibility_shutter_button">Shutter button</string>
    <string name="accessibility_menu_button">Menu button</string>
    <string name="accessibility_review_thumbnail">Most recent photo</string>
    <string name="accessibility_camera_picker">Front and back camera switch</string>
    <string name="accessibility_mode_picker">Camera, video, or panorama selector</string>
    <string name="accessibility_second_level_indicators">More setting controls</string>
    <string name="accessibility_back_to_first_level">Close setting controls</string>
    <string name="accessibility_zoom_control">Zoom control</string>
    <string name="accessibility_decrement">Decrease %1$s</string>
    <string name="accessibility_increment">Increase %1$s</string>
    <string name="accessibility_switch">%1$s switch</string>
    <string name="accessibility_switch_to_camera">Switch to photo</string>
    <string name="accessibility_switch_to_video">Switch to video</string>
    <string name="accessibility_switch_to_panorama">Switch to panorama</string>
    <string name="accessibility_switch_to_new_panorama">Switch to new panorama</string>
    <string name="accessibility_review_cancel">Review cancel</string>
    <string name="accessibility_review_ok">Review done</string>
    <string name="accessibility_review_retake">Review retake</string>
    <string name="capital_on">ON</string>
    <string name="capital_off">OFF</string>
    <string name="pref_video_time_lapse_frame_interval_off">Off</string>
    <string name="pref_video_time_lapse_frame_interval_500">0.5 seconds</string>
    <string name="pref_video_time_lapse_frame_interval_1000">1 second</string>
    <string name="pref_video_time_lapse_frame_interval_1500">1.5 seconds</string>
    <string name="pref_video_time_lapse_frame_interval_2000">2 seconds</string>
    <string name="pref_video_time_lapse_frame_interval_2500">2.5 seconds</string>
    <string name="pref_video_time_lapse_frame_interval_3000">3 seconds</string>
    <string name="pref_video_time_lapse_frame_interval_4000">4 seconds</string>
    <string name="pref_video_time_lapse_frame_interval_5000">5 seconds</string>
    <string name="pref_video_time_lapse_frame_interval_6000">6 seconds</string>
    <string name="pref_video_time_lapse_frame_interval_10000">10 seconds</string>
    <string name="pref_video_time_lapse_frame_interval_12000">12 seconds</string>
    <string name="pref_video_time_lapse_frame_interval_15000">15 seconds</string>
    <string name="pref_camera_id_default">0</string>
    <string name="pref_camera_gps_title">GPS tag</string>
    <string name="pref_video_quality_title">Resolution</string>
    <string name="pref_video_quality_default">5</string>
    <string name="pref_camera_settings_category">Camera settings</string>
    <string name="pref_camera_picturesize_title">Resolution</string>
    <string name="pref_camera_flashmode_default">auto</string>
    <string name="pref_camera_whitebalance_default">auto</string>
    <string name="pref_camera_whitebalance_title">White balance</string>
    <string name="pref_camera_scenemode_default">auto</string>
    <string name="pref_camera_scenemode_title">Scene type</string>
    <string name="pref_exposure_title">Exposure</string>
    <string name="pref_exposure_default">0</string>
    <string name="app_name">Gallery</string>
    <string name="pref_camera_timer_title">Timer</string>
    <string name="pref_camera_shootmode_title">Shooting mode</string>
    <string name="pref_camera_shootmode_back_default">smart</string>
    <string name="pref_camera_restore_title">Restore defaults</string>
    <string name="pref_camera_restore_default">off</string>
    <string name="pref_camera_iso_default">auto</string>
    <string name="pref_camera_iso_title">ISO</string>
    <string name="pref_camera_steady_video_title">Stabilizer</string>
    <string name="pref_camera_steady_video_default">off</string>
    <string name="pref_camera_timer_back_default">0</string>
    <string name="pref_camera_touch_snapshot_front_default">on</string>
    <string name="pref_camera_touch_capture_title">Touch to capture</string>
    <string name="pref_camera_recordlocation_default">off</string>
    <string name="sound_state_title">Mute</string>
    <string name="pref_camera_sound_state_default">1</string>
    <string name="pref_hdr_movie_default">off</string>
    <string name="hdr_movie_title">HDR video</string>
    <string name="pref_camera_shootmode_entry_smile">Capture smiles</string>
    <string name="pref_target_tracking_title">Object tracking</string>
    <string name="pref_camera_target_tracking_default">off</string>
    <string name="pref_camera_save_location_default">memorycard</string>
    <string name="pref_camera_save_location_title">Preferred save location</string>
    <string name="pref_camera_contrast_default">middle</string>
    <string name="pref_camera_contrast_title">Contrast</string>
    <string name="pref_camera_saturation_title">Saturation</string>
    <string name="pref_camera_saturation_default">middle</string>
    <string name="image_adjustment">Image adjustments</string>
    <string name="pref_camera_brightness_default">middle</string>
    <string name="pref_camera_brightness_title">Brightness</string>
    <string name="pref_camera_smile_default">off</string>
    <string name="pref_camera_lcd_compensation_default">off</string>
    <string name="pref_camera_burst_title">Burst</string>
    <string name="pref_camera_burst_default">off</string>
    <string name="pref_camera_mirror_default">on</string>
    <string name="pref_camera_mirror_title">Save as mirror reflection</string>
    <string name="pref_camera_sound_capture_title">Voice activated shooting</string>
    <string name="pref_camera_sound_snapshot_default">off</string>
    <string name="pref_panorama_direction_default">horizontal</string>
    <string name="pref_camera_bestphoto_title">Best photo</string>
    <string name="pref_camera_bestphoto_default">on</string>
    <string name="accessibility_shooting_mode">Menu</string>
    <string name="accessibility_falsh_mode">Flash</string>
    <string name="accessibility_front_falsh_mode">LCD light compensation</string>
    <string name="accessibility_panorama_direction">Direction switchover for panoramic shooting</string>
    <string name="camera_settings_title">Camera</string>
    <string name="video_settings_title">Video</string>
    <string name="other_settings_title">Others</string>
    <string name="pref_camera_antibanding_default">auto</string>
    <string name="pref_camera_antibanding_title">Antibanding</string>
    <string name="select_item">Select item</string>
    <string name="select_album">Select album</string>
    <string name="delete">Delete</string>
    <string name="share">Share</string>
    <string name="share_panorama">Share panorama</string>
    <string name="slideshow">Slideshow</string>
    <string name="details">Details</string>
    <string name="show_hidden_albums">Show hidden albums</string>
    <string name="set_private_albums">Set private albums</string>
    <string name="switch_to_camera">Switch to Camera</string>
    <string name="show_on_map">Show on map</string>
    <string name="rotate_left">Rotate Left</string>
    <string name="rotate_right">Rotate Right</string>
    <string name="edit">Edit</string>
    <string name="trim_action">Trim</string>
    <string name="make_available_offline">Make available offline</string>
    <string name="sync_picasa_albums">Refresh</string>
    <string name="Import">Import</string>
    <string name="group_by">Group by</string>
    <string name="settings">Settings</string>
    <string name="apn_settings">Access Point Names</string>
    <string name="rtsp_proxy_settings">RTSP Proxy Settings</string>
    <string name="rtsp_proxy_settings_summary">Setup and manage RTSP proxy settings</string>
    <string name="enable_rtsp_proxy">Enable RTSP proxy</string>
    <string name="enable_rtsp_proxy_summary">Enable/Disable RTSP proxy</string>
    <string name="http_proxy_settings">HTTP Proxy Settings</string>
    <string name="http_proxy_settings_summary">Setup and manage HTTP proxy settings</string>
    <string name="enable_http_proxy">Enable HTTP proxy</string>
    <string name="enable_http_proxy_summary">Enable/Disable HTTP proxy</string>
    <string name="apn_settings_summary">"Current SIM: %1$s
Current APN: %2$s"</string>
    <string name="udp_port_settings">RTP/RTCP Port Range</string>
    <string name="udp_port_settings_summary">Set Max and Min Port Number</string>
    <string name="http_buffer_size">HTTP buffer size</string>
    <string name="http_buffer_size_summary">Set HTTP buffer size for streaming</string>
    <string name="rtsp_buffer_size">RTSP buffer size</string>
    <string name="rtsp_buffer_size_summary">Set RTSP buffer size for streaming</string>
    <string name="help">Help</string>
    <string name="set_hide">Hide/Show album</string>
    <string name="dlna_refresh">Refreshing</string>
    <string name="dlna_around">Sharing Around</string>
    <string name="multiscreen_title">Multi-screen</string>
    <string name="copy">Copy</string>
    <string name="cut">Move</string>
    <string name="paste">Paste</string>
    <string name="photoshare">Cloud Photos</string>
    <string name="photoshare_download">Downloads</string>
    <string name="photoshare_download_short">Downloads</string>
    <string name="photoshare_create_new_share">New shared album</string>
    <string name="photoshare_add_picture">Add photos</string>
    <string name="photoshare_edit_my_share">Edit album</string>
    <string name="photoshare_setting">Settings</string>
    <string name="set_as_new">Set as</string>
</resources>