<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen android:title="@string/settings"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <Preference android:persistent="false" android:title="@string/apn_settings" android:key="apn_settings" android:summary="@string/apn_settings_summary" />
    <CheckBoxPreference android:persistent="false" android:title="@string/enable_http_proxy" android:key="enable_http_proxy" android:summary="@string/enable_http_proxy_summary" />
    <Preference android:persistent="false" android:title="@string/http_proxy_settings" android:key="http_proxy_settings" android:summary="@string/http_proxy_settings_summary" android:dependency="enable_http_proxy" />
    <Preference android:persistent="false" android:title="@string/http_buffer_size" android:key="http_buffer_size" android:summary="@string/http_buffer_size_summary" />
    <CheckBoxPreference android:persistent="false" android:title="@string/enable_rtsp_proxy" android:key="enable_rtsp_proxy" android:summary="@string/enable_rtsp_proxy_summary" />
    <Preference android:persistent="false" android:title="@string/rtsp_proxy_settings" android:key="rtsp_proxy_settings" android:summary="@string/rtsp_proxy_settings_summary" android:dependency="enable_rtsp_proxy" />
    <Preference android:persistent="false" android:title="@string/udp_port_settings" android:key="udp_port_settings" android:summary="@string/udp_port_settings_summary" />
    <Preference android:persistent="false" android:title="@string/rtsp_buffer_size" android:key="rtsp_buffer_size" android:summary="@string/rtsp_buffer_size_summary" />
</PreferenceScreen>