<?xml version="1.0" encoding="utf-8"?>
<PreferenceGroup camera:title="@string/pref_camera_settings_category"
  xmlns:camera="http://schemas.android.com/apk/res/com.android.gallery3d">
    <MenuIconListPreference camera:title="@string/pref_camera_shootmode_title" camera:key="pref_camera_tab_key" camera:singleIcon="@drawable/ic_btn_menu_dr" camera:childViewType="@integer/pref_layout_tab_menu_style" camera:viewType="@integer/pref_menu_image_style" camera:contentDescription="@string/accessibility_second_level_indicators" camera:prefs="@array/pref_settings" />
    <MenuIconListPreference camera:title="@string/camera_settings_title" camera:key="pref_camera_settings_key" camera:childViewType="@integer/pref_layout_settings_list_style" camera:prefs="@array/pref_camera_settings_entries" />
    <MenuIconListPreference camera:title="@string/video_settings_title" camera:key="pref_video_settings_key" camera:childViewType="@integer/pref_layout_settings_list_style" camera:prefs="@array/pref_video_settings_entries" />
    <MenuIconListPreference camera:title="@string/other_settings_title" camera:key="pref_other_settings_key" camera:childViewType="@integer/pref_layout_settings_list_style" camera:prefs="@array/pref_other_settings_entries" />
    <MenuIconListPreference camera:title="@string/pref_camera_shootmode_title" camera:key="pref_camera_shooting_mode_key" camera:defaultValue="@string/pref_camera_shootmode_back_default" camera:entryValues="@array/pref_camera_shootmode_entryvalue" camera:entries="@array/pref_camera_shootmode_entries" camera:icons="@array/shootmode_icons" camera:largeIcons="@array/shootmode_large_icons" camera:images="@array/shootmode_images" camera:childViewType="@integer/pref_layout_shoot_mode_style" camera:viewType="@integer/pref_menu_image_style" camera:contentDescription="@string/accessibility_shooting_mode" />
    <MenuIconListPreference camera:key="pref_camera_flashmode_key" camera:defaultValue="@string/pref_camera_flashmode_default" camera:entryValues="@array/pref_camera_flashmode_entryvalues" camera:entries="@array/pref_camera_flashmode_entries" camera:icons="@array/camera_flashmode_icons" camera:childViewType="@integer/pref_layout_none_menu_style" camera:contentDescription="@string/accessibility_falsh_mode" />
    <MenuIconListPreference camera:key="pref_camera_front_flashmode_key" camera:defaultValue="@string/pref_camera_lcd_compensation_default" camera:entryValues="@array/pref_camera_flashmode_entryvalues" camera:entries="@array/pref_camera_flashmode_entries" camera:icons="@array/camera_compensate_flashmode_icons" camera:childViewType="@integer/pref_layout_none_menu_style" camera:contentDescription="@string/accessibility_front_falsh_mode" />
    <MenuIconListPreference camera:key="pref_camera_panorama_direction_key" camera:defaultValue="@string/pref_panorama_direction_default" camera:entryValues="@array/pref_panorama_direction_entryvalues" camera:entries="@array/pref_panorama_direction_entries" camera:icons="@array/panorama_direction_icons" camera:childViewType="@integer/pref_layout_none_menu_style" camera:contentDescription="@string/accessibility_panorama_direction" />
    <MenuIconListPreference camera:title="@string/pref_camera_id_title" camera:key="pref_camera_id_key" camera:defaultValue="@string/pref_camera_id_default" camera:entries="@array/camera_id_entries" camera:icons="@array/camera_id_icons" camera:childViewType="@integer/pref_layout_none_menu_style" camera:contentDescription="@string/accessibility_camera_picker" />
    <MenuIconListPreference camera:title="@string/pref_target_tracking_title" camera:key="pref_video_target_tracking_key" camera:defaultValue="@string/pref_camera_target_tracking_default" camera:entryValues="@array/pref_target_tracking_entryvalues" camera:entries="@array/pref_target_tracking_entries" camera:singleIcon="@drawable/ic_object_tracking" camera:childViewType="@integer/pref_layout_none_menu_style" camera:viewType="@integer/pref_menu_checkbox_style" />
    <MenuIconListPreference camera:title="@string/hdr_movie_title" camera:key="pref_hdr_movie_key" camera:defaultValue="@string/pref_hdr_movie_default" camera:entryValues="@array/pref_camera_hdr_movie_entryvalue" camera:entries="@array/pref_camera_hdr_movie_entries" camera:singleIcon="@drawable/ic_hdr_movie" camera:childViewType="@integer/pref_layout_none_menu_style" camera:viewType="@integer/pref_menu_checkbox_style" />
    <MenuIconListPreference camera:title="@string/pref_camera_steady_video_title" camera:key="pref_video_stabilization" camera:defaultValue="@string/pref_camera_steady_video_default" camera:entryValues="@array/pref_camera_steady_video_entryvalue" camera:entries="@array/pref_camera_steady_video_entries" camera:singleIcon="@drawable/ic_steady" camera:childViewType="@integer/pref_layout_none_menu_style" camera:viewType="@integer/pref_menu_checkbox_style" />
    <MenuIconListPreference camera:title="@string/pref_video_quality_title" camera:key="pref_video_quality_key" camera:defaultValue="@string/pref_video_quality_default" camera:entryValues="@array/pref_video_quality_entryvalues" camera:entries="@array/pref_video_quality_entries" camera:icons="@array/video_quality_icons" camera:childViewType="@integer/pref_layout_settings_detail_style" camera:viewType="@integer/pref_menu_singleline_style" />
    <MenuIconListPreference camera:title="@string/pref_target_tracking_title" camera:key="pref_camera_target_tracking_key" camera:defaultValue="@string/pref_camera_target_tracking_default" camera:entryValues="@array/pref_target_tracking_entryvalues" camera:entries="@array/pref_target_tracking_entries" camera:singleIcon="@drawable/ic_object_tracking" camera:childViewType="@integer/pref_layout_none_menu_style" camera:viewType="@integer/pref_menu_checkbox_style" />
    <MenuIconListPreference camera:title="@string/pref_camera_shootmode_entry_smile" camera:key="pref_camera_smile_key" camera:defaultValue="@string/pref_camera_smile_default" camera:entryValues="@array/pref_smile_entryvalues" camera:entries="@array/pref_smile_entries" camera:singleIcon="@drawable/ic_smile_capture" camera:childViewType="@integer/pref_layout_none_menu_style" camera:viewType="@integer/pref_menu_checkbox_style" />
    <MenuIconListPreference camera:title="@string/pref_camera_touch_capture_title" camera:key="pref_camera_touch_snapshot_key" camera:defaultValue="@string/pref_camera_touch_snapshot_front_default" camera:entryValues="@array/pref_camera_touch_snapshot_entryvalues" camera:entries="@array/pref_camera_touch_snapshot_entries" camera:singleIcon="@drawable/ic_touch_capture" camera:childViewType="@integer/pref_layout_none_menu_style" camera:viewType="@integer/pref_menu_checkbox_style" />
    <MenuIconListPreference camera:title="@string/pref_camera_sound_capture_title" camera:key="pref_camera_sound_snapshot_key" camera:defaultValue="@string/pref_camera_sound_snapshot_default" camera:entryValues="@array/pref_camera_sound_snapshot_entryvalues" camera:entries="@array/pref_camera_sound_snapshot_entries" camera:singleIcon="@drawable/ic_voice_capture" camera:childViewType="@integer/pref_layout_none_menu_style" camera:viewType="@integer/pref_menu_checkbox_style" />
    <MenuIconListPreference camera:title="@string/pref_camera_burst_title" camera:key="pref_camera_burst_key" camera:defaultValue="@string/pref_camera_burst_default" camera:entryValues="@array/pref_camera_burst_entryvalues" camera:entries="@array/pref_camera_burst_entries" camera:singleIcon="@drawable/ic_burst" camera:childViewType="@integer/pref_layout_none_menu_style" camera:viewType="@integer/pref_menu_checkbox_style" />
    <MenuIconListPreference camera:title="@string/pref_camera_bestphoto_title" camera:key="pref_camera_bestphoto_key" camera:defaultValue="@string/pref_camera_bestphoto_default" camera:entryValues="@array/pref_camera_bestphoto_entryvalues" camera:entries="@array/pref_camera_bestphoto_entries" camera:singleIcon="@drawable/ic_burst" camera:childViewType="@integer/pref_layout_none_menu_style" camera:viewType="@integer/pref_menu_checkbox_style" />
    <MenuIconListPreference camera:title="@string/pref_camera_mirror_title" camera:key="pref_camera_mirror_key" camera:defaultValue="@string/pref_camera_mirror_default" camera:entryValues="@array/pref_camera_mirror_entryvalues" camera:entries="@array/pref_camera_mirror_entries" camera:singleIcon="@drawable/ic_mirror" camera:childViewType="@integer/pref_layout_none_menu_style" camera:viewType="@integer/pref_menu_checkbox_style" />
    <MenuIconListPreference camera:title="@string/pref_camera_picturesize_title" camera:key="pref_camera_picturesize_key" camera:entryValues="@array/pref_camera_picturesize_entryvalues" camera:entries="@array/pref_camera_picturesize_entries" camera:icons="@array/camera_picturesize_icons" camera:childViewType="@integer/pref_layout_settings_detail_style" camera:viewType="@integer/pref_menu_singleline_style" />
    <MenuIconListPreference camera:title="@string/pref_camera_timer_title" camera:key="pref_camera_counter_key" camera:defaultValue="@string/pref_camera_timer_back_default" camera:entryValues="@array/pref_camera_counter_entryvalue" camera:entries="@array/pref_camera_counter_entries" camera:icons="@array/counter_icons" camera:childViewType="@integer/pref_layout_settings_detail_style" camera:viewType="@integer/pref_menu_singleline_style" />
    <MenuIconListPreference camera:title="@string/pref_camera_scenemode_title" camera:key="pref_camera_scenemode_key" camera:defaultValue="@string/pref_camera_scenemode_default" camera:entryValues="@array/pref_camera_scenemode_entryvalues" camera:entries="@array/pref_camera_scenemode_entries" camera:icons="@array/camera_scenemode_icons" camera:childViewType="@integer/pref_layout_settings_detail_style" camera:viewType="@integer/pref_menu_singleline_style" />
    <MenuIconListPreference camera:title="@string/pref_camera_iso_title" camera:key="pref_camera_iso_key" camera:defaultValue="@string/pref_camera_iso_default" camera:entryValues="@array/pref_camera_iso_entryvalues" camera:entries="@array/pref_camera_iso_entries" camera:icons="@array/camera_iso_icons" camera:childViewType="@integer/pref_layout_settings_detail_style" camera:viewType="@integer/pref_menu_singleline_style" />
    <MenuIconListPreference camera:title="@string/pref_camera_whitebalance_title" camera:key="pref_camera_whitebalance_key" camera:defaultValue="@string/pref_camera_whitebalance_default" camera:entryValues="@array/pref_camera_whitebalance_entryvalues" camera:entries="@array/pref_camera_whitebalance_entries" camera:icons="@array/whitebalance_icons" camera:childViewType="@integer/pref_layout_settings_detail_style" camera:viewType="@integer/pref_menu_singleline_style" />
    <MenuIconListPreference camera:title="@string/image_adjustment" camera:key="pref_camera_imagejust_key" camera:singleIcon="@drawable/ic_adjustments" camera:childViewType="@integer/pref_layout_settings_list_with_back_icon_style" camera:viewType="@integer/pref_menu_singleline_style" camera:prefs="@array/pref_camera_imagejust_prefs" />
    <MenuIconListPreference camera:title="@string/pref_camera_saturation_title" camera:key="pref_camera_saturation_key" camera:defaultValue="@string/pref_camera_saturation_default" camera:singleIcon="@drawable/ic_adjustments_saturation" camera:viewType="@integer/pref_menu_seekbar_style" />
    <MenuIconListPreference camera:title="@string/pref_camera_brightness_title" camera:key="pref_camera_brightness_key" camera:defaultValue="@string/pref_camera_brightness_default" camera:singleIcon="@drawable/ic_adjustments_brightness" camera:viewType="@integer/pref_menu_seekbar_style" />
    <MenuIconListPreference camera:title="@string/pref_exposure_title" camera:key="pref_camera_exposure_key" camera:defaultValue="@string/pref_exposure_default" camera:singleIcon="@drawable/ic_adjustments_exposure" camera:viewType="@integer/pref_menu_seekbar_style" />
    <MenuIconListPreference camera:title="@string/pref_camera_contrast_title" camera:key="pref_camera_contrast_key" camera:defaultValue="@string/pref_camera_contrast_default" camera:singleIcon="@drawable/ic_adjustments_contrast" camera:viewType="@integer/pref_menu_seekbar_style" />
    <MenuIconListPreference camera:title="@string/pref_camera_antibanding_title" camera:key="pref_camera_antibanding_key" camera:defaultValue="@string/pref_camera_antibanding_default" camera:entryValues="@array/pref_camera_antibanding_entryvalues" camera:entries="@array/pref_camera_antibanding_entries" camera:icons="@array/camera_antibanding_icons" camera:childViewType="@integer/pref_layout_settings_detail_style" camera:viewType="@integer/pref_menu_singleline_style" />
    <MenuIconListPreference camera:title="@string/sound_state_title" camera:key="pref_camera_sound_state_key" camera:defaultValue="@string/pref_camera_sound_state_default" camera:entryValues="@array/pref_camera_sound_state_entryenvalues" camera:entries="@array/pref_camera_sound_state_entryentries" camera:singleIcon="@drawable/ic_mute" camera:childViewType="@integer/pref_layout_none_menu_style" camera:viewType="@integer/pref_menu_checkbox_style" />
    <MenuIconListPreference camera:title="@string/pref_camera_gps_title" camera:key="pref_camera_recordlocation_key" camera:defaultValue="@string/pref_camera_recordlocation_default" camera:entryValues="@array/pref_camera_recordlocation_entryvalues" camera:entries="@array/pref_camera_recordlocation_entries" camera:singleIcon="@drawable/ic_gps" camera:childViewType="@integer/pref_layout_none_menu_style" camera:viewType="@integer/pref_menu_checkbox_style" />
    <MenuIconListPreference camera:title="@string/pref_camera_save_location_title" camera:key="pref_camera_storage_path_key" camera:defaultValue="@string/pref_camera_save_location_default" camera:entryValues="@array/pref_camera_save_location_entryvalue" camera:entries="@array/pref_camera_save_location_entries" camera:icons="@array/camera_storage_path_icons" camera:childViewType="@integer/pref_layout_settings_detail_style" camera:viewType="@integer/pref_menu_singleline_style" />
    <MenuIconListPreference camera:title="@string/pref_camera_restore_title" camera:key="pref_camera_restore_key" camera:defaultValue="@string/pref_camera_restore_default" camera:entryValues="@array/pref_camera_restore_entryvalue" camera:entries="@array/pref_camera_restore_entries" camera:icons="@array/camera_restore_icons" camera:childViewType="@integer/pref_layout_none_menu_style" camera:viewType="@integer/pref_menu_singleline_style" />
</PreferenceGroup>